# academic-lsp

./: .gitignore  LICENSE  README.md  academic-lsp.example.toml  academic-lsp.toml  pyproject.toml
examples/: smoke.md
rules/: basic-academic-prose.md  jvgemert-writing.md  test-rules.md
scripts/: headless_nvim_check.sh  smoke_llm.py
src/academic_lsp/: __init__.py  config.py  diagnostics.py  llm.py  server.py
tests/: test_config.py  test_diagnostics.py  test_llm.py  test_rules.py
